--- a/A-bib.bib
+++ b/A-bib.bib
@@ -14,6 +14,21 @@
 % Missing required field 'author'
 % Missing required field 'editor'
 
+@book{allen2010,
+  title = {Training and Racing with a Power Meter},
+  author = {Allen, Hunter and Coggan, Andrew},
+  date = {2010},
+  edition = {2nd ed},
+  publisher = {{VeloPress}},
+  location = {{Boulder, Colo}},
+  isbn = {978-1-934030-55-4},
+  pagetotal = {326},
+  keywords = {Cycling,Training,Triathlon}
+}
+% == BibLateX quality report for allen2010:
+% ? unused Call number ("GV1048 .A55 2010")
+% ? unused Library catalog ("Library of Congress ISBN")
+
 @online{buhrmann2020,
   title = {Creating a {{Strava}} Style Power Curve from Cycling Data Using Python},
   author = {Buhrmann, Hannes},
