--- a/A-bib.bib
+++ b/A-bib.bib
@@ -29,6 +29,26 @@
 % ? unused Call number ("GV1048 .A55 2010")
 % ? unused Library catalog ("Library of Congress ISBN")
 
+@online{ashtiani2021,
+  title = {Optimal {{Pacing}} of a {{Cyclist}} in a {{Time Trial Based}} on {{Individualized Models}} of {{Fatigue}} and {{Recovery}}},
+  author = {Ashtiani, Faraz and Sreedhara, Vijay Sarthy M. and Vahidi, Ardalan and Hutchison, Randolph and Mocko, Gregory},
+  date = {2021-10-27},
+  eprint = {2007.11393},
+  eprinttype = {arxiv},
+  primaryclass = {cs, eess},
+  url = {http://arxiv.org/abs/2007.11393},
+  urldate = {2022-02-19},
+  abstract = {This paper formulates optimal pacing of a cyclist on hilly terrain time-trials as a minimum-time optimal control problem. Maximal power of a cyclist serves as a time-varying constraint and depends on fatigue and recovery which are captured via dynamic models proposed early in the paper. Experimental protocols for identifying the individualized parameters of the proposed fatigue and recovery models are detailed and results for six human subjects are shown. In an analytical treatment via necessary conditions of Pontryagin Minimum Principle, we show that the cyclist's optimal power in a time-trial is limited to only four modes of all-out, coasting, pedaling at a critical power, or constant speed (bang-singular-bang). To determine when to switch between these modes, we resort to numerical solution via dynamic programming. One of the subjects is then simulated on four courses including the 2019 Duathlon National Championship in Greenville, SC. The dynamic programming simulation results show 24\% reduction in travel time over experimental results of the self-paced subject who is a competitive amateur cyclist. The paper concludes with description of a pilot lab experiment in which the subject trial time was reduced by 3\% when the near-optimal pace was communicated to her in real-time.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Electrical Engineering and Systems Science - Signal Processing,Electrical Engineering and Systems Science - Systems and Control},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\GAGR2J4Y\\Ashtiani et al. - 2021 - Optimal Pacing of a Cyclist in a Time Trial Based .pdf}
+}
+% == BibLateX quality report for ashtiani2021:
+% Unexpected field 'primaryclass'
+% Unexpected field 'archiveprefix'
+% ? Title looks like it was stored in title-case in Zotero
+
 @online{buhrmann2020,
   title = {Creating a {{Strava}} Style Power Curve from Cycling Data Using Python},
   author = {Buhrmann, Hannes},
@@ -61,6 +81,44 @@
 }
 % == BibLateX quality report for burnley2018:
 % ? unused Library catalog ("PubMed")
+
+@article{cangley2011,
+  title = {A Model for Performance Enhancement in Competitive Cycling},
+  author = {Cangley, Patrick and Passfield, Louis and Carter, Helen and Bailey, Martin},
+  date = {2011-10-25},
+  journaltitle = {Movement and Sport Sciences - Science and Motricite},
+  volume = {75},
+  pages = {59--71},
+  issn = {2118-5735},
+  doi = {10.1051/sm/2011126},
+  abstract = {A 3D cycling model is presented that combines bicycle dynamics, a tyre model, rider biomechanics and environmental factors into a single dynamic system. The system is constructed using Matlab toolboxes (SimMechanics/Simulink) with the aim of identifying mechanical mechanisms that can influence performance in a road cycling time trial. Initial conditions are specified and a variable step ODE solver numerically integrates solutions to the equations of motion. Initial validation compared rider-less self-stability presented in a published ``benchmark'' with model simulation and found an error of {$<$}1.5\%. Model results included the weave eigenvalue becoming negative at 4.2 m/s and the capsize eigenvalue approaching a positive value at 6.1 m/s. The tyre model predicted peak front tyre slip and camber forces of 130 N and 17 N respectively which were within 0.9\% of values reported in the literature. Experimental field validation compared actual and model predicted time taken by 14 experienced cyclists to complete a time trial over an undulating 2.5 mile road course. An error level of 1.4\% ({$\pm$}1.5\%) was found between actual and predicted time. This compares well with the average 1.32\% error reported by existing road cycling models over simpler courses.},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\VVHNS8KW\\cangley_2011_.pdf}
+}
+% == BibLateX quality report for cangley2011:
+% ? unused Library catalog ("The University of Brighton")
+
+@article{cangley2011a,
+  title = {The {{Effect}} of {{Variable Gradients}} on {{Pacing}} in {{Cycling Time-Trials}}},
+  author = {Cangley, P. and Passfield, L. and Carter, H. and Bailey, M.},
+  date = {2011-02},
+  journaltitle = {International Journal of Sports Medicine},
+  shortjournal = {Int J Sports Med},
+  volume = {32},
+  number = {02},
+  pages = {132--136},
+  publisher = {{\textcopyright{} Georg Thieme Verlag KG Stuttgart {$\cdot$} New York}},
+  issn = {0172-4622, 1439-3964},
+  doi = {10.1055/s-0030-1268440},
+  url = {http://www.thieme-connect.de/DOI/DOI?10.1055/s-0030-1268440},
+  urldate = {2022-02-19},
+  abstract = {Thieme E-Books \& E-Journals},
+  langid = {english}
+}
+% == BibLateX quality report for cangley2011a:
+% Unexpected field 'publisher'
+% 'issn': not a valid ISSN
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("www.thieme-connect.de")
 
 @article{chorley2020,
   title = {Physiological and Anthropometric Determinants of Critical Power, {{W}}{${'}$} and the Reconstitution of {{W}}{${'}$} in Trained and Untrained Male Cyclists},
@@ -373,6 +431,28 @@
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("osf.io")
 
+@article{maier2017,
+  title = {Accuracy of {{Cycling Power Meters}} against a {{Mathematical Model}} of {{Treadmill Cycling}}},
+  author = {Maier, Thomas and Schmid, Lucas and M\"uller, Beat and Steiner, Thomas and Wehrlin, Jon Peter},
+  date = {2017-06},
+  journaltitle = {International Journal of Sports Medicine},
+  shortjournal = {Int J Sports Med},
+  volume = {38},
+  number = {6},
+  eprint = {28482367},
+  eprinttype = {pmid},
+  pages = {456--461},
+  issn = {1439-3964},
+  doi = {10.1055/s-0043-102945},
+  abstract = {The aim of this study was to compare the accuracy among a high number of current mobile cycling power meters used by elite and recreational cyclists against a first principle-based mathematical model of treadmill cycling. 54 power meters from 9 manufacturers used by 32 cyclists were calibrated. While the cyclist coasted downhill on a motorised treadmill, a back-pulling system was adjusted to counter the downhill force. The system was then loaded 3 times with 4 different masses while the cyclist pedalled to keep his position. The mean deviation (trueness) to the model and coefficient of variation (precision) were analysed. The mean deviations of the power meters were -0.9{$\pm$}3.2\% (mean{$\pm$}SD) with 6 power meters deviating by more than{$\pm$}5\%. The coefficients of variation of the power meters were 1.2{$\pm$}0.9\% (mean{$\pm$}SD), with Stages varying more than SRM (p{$<$}0.001) and PowerTap (p{$<$}0.001). In conclusion, current power meters used by elite and recreational cyclists vary considerably in their trueness; precision is generally high but differs between manufacturers. Calibrating and adjusting the trueness of every power meter against a first principle-based reference is advised for accurate measurements.},
+  langid = {english},
+  keywords = {Bicycling,Calibration,Ergometry,Exercise Test,Humans,Models; Theoretical},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\JWFUSBJL\\maier_2017_.pdf}
+}
+% == BibLateX quality report for maier2017:
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("PubMed")
+
 @report{mantica2015,
   title = {Human {{Performance Modelling}} on {{Wearable Devices}}},
   author = {Mantica, Stefano},
@@ -386,6 +466,28 @@
 % Missing required field 'institution'
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("ResearchGate")
+
+@article{martin1998,
+  title = {Validation of a {{Mathematical Model}} for {{Road Cycling Power}}},
+  author = {Martin, James C. and Milliken, Douglas L. and Cobb, John E. and McFadden, Kevin L. and Coggan, Andrew R.},
+  date = {1998-08},
+  journaltitle = {Journal of Applied Biomechanics},
+  shortjournal = {J Appl Biomech},
+  volume = {14},
+  number = {3},
+  eprint = {28121252},
+  eprinttype = {pmid},
+  pages = {276--291},
+  issn = {1543-2688},
+  doi = {10.1123/jab.14.3.276},
+  abstract = {This investigation sought to determine if cycling power could be accurately modeled. A mathematical model of cycling power was derived, and values for each model parameter were determined. A bicycle-mounted power measurement system was validated by comparison with a laboratory ergometer. Power was measured during road cycling, and the measured values were compared with the values predicted by the model. The measured values for power were highly correlated (R2 = .97) with, and were not different than, the modeled values. The standard error between the modeled and measured power (2.7 W) was very small. The model was also used to estimate the effects of changes in several model parameters on cycling velocity. Over the range of parameter values evaluated, velocity varied linearly (R2 {$>$} .99). The results demonstrated that cycling power can be accurately predicted by a mathematical model.},
+  langid = {english},
+  keywords = {aerodynamic drag,air velocity,gradient,rolling resistance},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\YYBFQ9RI\\martin_1998_.pdf}
+}
+% == BibLateX quality report for martin1998:
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("PubMed")
 
 @article{monod1965,
   title = {The {{Work Capacity}} of a {{Synergic Muscular Group}}},
@@ -637,6 +739,27 @@ Cycling performance,ventilatory threshold,VO2 max},
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("PubMed")
 
+@article{wells2016,
+  title = {Effects of Power Variation on Cycle Performance during Simulated Hilly Time-Trials},
+  author = {Wells, Marc S. and Marwood, Simon},
+  date = {2016-11},
+  journaltitle = {European Journal of Sport Science},
+  shortjournal = {Eur J Sport Sci},
+  volume = {16},
+  number = {8},
+  eprint = {26949050},
+  eprinttype = {pmid},
+  pages = {912--918},
+  issn = {1536-7290},
+  doi = {10.1080/17461391.2016.1156162},
+  abstract = {It has previously been shown that cyclists are unable to maintain a constant power output during cycle time-trials on hilly courses. The purpose of the present study is therefore to quantify these effects of power variation using a mathematical model of cycling performance. A hypothetical cyclist (body mass: 70\hspace{0.25em}kg, bicycle mass: 10\hspace{0.25em}kg) was studied using a mathematical model of cycling, which included the effects of acceleration. Performance was modelled over three hypothetical 40-km courses, comprising repeated 2.5-km sections of uphill and downhill with gradients of 1\%, 3\%, and 6\%, respectively. Amplitude (5-15\%) and distance (0.31-20.00\hspace{0.25em}km) of variation were modelled over a range of mean power outputs (200-600\hspace{0.25em}W) and compared to sustaining a constant power. Power variation was typically detrimental to performance; these effects were augmented as the amplitude of variation and severity of gradient increased. Varying power every 1.25\hspace{0.25em}km was most detrimental to performance; at a mean power of 200\hspace{0.25em}W, performance was impaired by 43.90\hspace{0.25em}s ({$\pm$}15\% variation, 6\% gradient). However at the steepest gradients, the effect of power variation was relatively independent of the distance of variation. In contrast, varying power in parallel with changes in gradient improved performance by 188.89\hspace{0.25em}s ({$\pm$}15\% variation, 6\% gradient) at 200\hspace{0.25em}W. The present data demonstrate that during hilly time-trials, power variation that does not occur in parallel with changes in gradient is detrimental to performance, especially at steeper gradients. These adverse effects are substantially larger than those previously observed during flat, windless time-trials.},
+  langid = {english},
+  keywords = {Bicycling,cycling,hilly,Humans,mathematical model,modelling,Models; Theoretical,Pacing,Physical Exertion},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\4SBI7JKH\\wells_2016_.pdf}
+}
+% == BibLateX quality report for wells2016:
+% ? unused Library catalog ("PubMed")
+
 @article{zinoubi2017,
   title = {Modeling of {{Running Performances}} in {{Humans}}: {{Comparison}} of {{Power Laws}} and {{Critical Speed}}},
   shorttitle = {Modeling of {{Running Performances}} in {{Humans}}},
@@ -741,6 +864,24 @@ Cycling performance,ventilatory threshold,VO2 max},
 }
 % == BibLateX quality report for zotero-1221:
 % Exactly one of 'date' / 'year' must be present
+
+@online{zotero-1223,
+  title = {An Interactive Model-Based Calculator of Cycling Power vs. Speed},
+  url = {https://www.gribble.org/cycling/power_v_speed.html},
+  urldate = {2022-02-19}
+}
+% == BibLateX quality report for zotero-1223:
+% Exactly one of 'date' / 'year' must be present
+
+@online{zotero-1237,
+  title = {An {{Unbanked Turn}}},
+  url = {http://www.batesville.k12.in.us/physics/phynet/mechanics/circular%20motion/an_unbanked_turn.htm},
+  urldate = {2022-02-19},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\LCEHWU4A\\an_unbanked_turn.html}
+}
+% == BibLateX quality report for zotero-1237:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
 
 
 % Required packages:
