--- a/A-bib.bib
+++ b/A-bib.bib
@@ -49,6 +49,27 @@
 % Unexpected field 'archiveprefix'
 % ? Title looks like it was stored in title-case in Zotero
 
+@article{black2017,
+  title = {Muscle Metabolic and Neuromuscular Determinants of Fatigue during Cycling in Different Exercise Intensity Domains},
+  author = {Black, Matthew I. and Jones, Andrew M. and Blackwell, Jamie R. and Bailey, Stephen J. and Wylie, Lee J. and McDonagh, Sinead T. J. and Thompson, Christopher and Kelly, James and Sumners, Paul and Mileva, Katya N. and Bowtell, Joanna L. and Vanhatalo, Anni},
+  date = {2017-03},
+  journaltitle = {Journal of Applied Physiology},
+  volume = {122},
+  number = {3},
+  pages = {446--459},
+  publisher = {{American Physiological Society}},
+  issn = {8750-7587},
+  doi = {10.1152/japplphysiol.00942.2016},
+  url = {https://journals.physiology.org/doi/full/10.1152/japplphysiol.00942.2016},
+  urldate = {2022-02-20},
+  abstract = {Lactate or gas exchange threshold (GET) and critical power (CP) are closely associated with human exercise performance. We tested the hypothesis that the limit of tolerance (Tlim) during cycle exercise performed within the exercise intensity domains demarcated by GET and CP is linked to discrete muscle metabolic and neuromuscular responses. Eleven men performed a ramp incremental exercise test, 4\textendash 5 severe-intensity (SEV; {$>$}CP) constant-work-rate (CWR) tests until Tlim, a heavy-intensity (HVY; {$<$}CP but {$>$}GET) CWR test until Tlim, and a moderate-intensity (MOD; {$<$}GET) CWR test until Tlim. Muscle biopsies revealed that a similar (P {$>$} 0.05) muscle metabolic milieu (i.e., low pH and [PCr] and high [lactate]) was attained at Tlim (approximately 2\textendash 14 min) for all SEV exercise bouts. The muscle metabolic perturbation was greater at Tlim following SEV compared with HVY, and also following SEV and HVY compared with MOD (all P {$<$} 0.05). The normalized M-wave amplitude for the vastus lateralis (VL) muscle decreased to a similar extent following SEV (-38 {$\pm$} 15\%), HVY (-68 {$\pm$} 24\%), and MOD (-53 {$\pm$} 29\%), (P {$>$} 0.05). Neural drive to the VL increased during SEV (4 {$\pm$} 4\%; P {$<$} 0.05) but did not change during HVY or MOD (P {$>$} 0.05). During SEV and HVY, but not MOD, the rates of change in M-wave amplitude and neural drive were correlated with changes in muscle metabolic ([PCr], [lactate]) and blood ionic/acid-base status ([lactate], [K+]) (P {$<$} 0.05). The results of this study indicate that the metabolic and neuromuscular determinants of fatigue development differ according to the intensity domain in which the exercise is performed. NEW \& NOTEWORTHY The gas exchange threshold and the critical power demarcate discrete exercise intensity domains. For the first time, we show that the limit of tolerance during whole-body exercise within these domains is characterized by distinct metabolic and neuromuscular responses. Fatigue development during exercise greater than critical power is associated with the attainment of consistent ``limiting'' values of muscle metabolites, whereas substrate availability and limitations to muscle activation may constrain performance at lower intensities.},
+  keywords = {critical power,cycling exercise,gas exchange threshold,muscle metabolism,neuromuscular fatigue},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\HQZDEFFD\\black_2017_.pdf}
+}
+% == BibLateX quality report for black2017:
+% Unexpected field 'publisher'
+% ? unused Library catalog ("journals.physiology.org (Atypon)")
+
 @online{buhrmann2020,
   title = {Creating a {{Strava}} Style Power Curve from Cycling Data Using Python},
   author = {Buhrmann, Hannes},
@@ -882,6 +903,18 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for zotero-1237:
 % Exactly one of 'date' / 'year' must be present
 % ? Title looks like it was stored in title-case in Zotero
+
+@online{zotero-1242,
+  title = {How Many Meters Make up a Degree of Longitude/Latitude on {{Earth}}?},
+  url = {https://www.quora.com/How-many-meters-make-up-a-degree-of-longitude-latitude-on-Earth},
+  urldate = {2022-02-19},
+  abstract = {Answer (1 of 6): To give a detailed explanation for this, let's start with the definition of a Latitude in Nautical Terms. A Latitude is the angle contained between the observer and the Equator, the angle which is measured at the centre of the earth. Similarly for the Longitude, it is angle measu...},
+  langid = {english},
+  organization = {{Quora}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\JVB5NNNR\\How-many-meters-make-up-a-degree-of-longitude-latitude-on-Earth.html}
+}
+% == BibLateX quality report for zotero-1242:
+% Exactly one of 'date' / 'year' must be present
 
 
 % Required packages:
