--- a/A-bib.bib
+++ b/A-bib.bib
@@ -916,6 +916,36 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for zotero-1242:
 % Exactly one of 'date' / 'year' must be present
 
+@online{zotero-1248,
+  title = {Rolling {{Resistance}}},
+  url = {https://www.engineeringtoolbox.com/rolling-friction-resistance-d_1303.html},
+  urldate = {2022-02-20},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\5RLIW7ET\\rolling-friction-resistance-d_1303.html}
+}
+% == BibLateX quality report for zotero-1248:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
+
+@online{zotero-1250,
+  title = {Afternoon {{Ride}} | {{Ride}} | {{Strava}}},
+  url = {https://www.strava.com/activities/5699365509},
+  urldate = {2022-02-20}
+}
+% == BibLateX quality report for zotero-1250:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
+
+@online{zotero-1251,
+  title = {Time Trial | Cycling | {{Britannica}}},
+  url = {https://www.britannica.com/sports/time-trial},
+  urldate = {2022-02-20},
+  abstract = {time trial, (``race against the watch''), in bicycle racing, a form of competition in which individual cyclists or teams are sent out at intervals to cover a specified distance on a road course. The contestant with the fastest time for the distance wins. The individual time trial is distinctive in t},
+  langid = {english},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\S9XQEGLU\\time-trial.html}
+}
+% == BibLateX quality report for zotero-1251:
+% Exactly one of 'date' / 'year' must be present
+
 
 % Required packages:
 % * textcomp
