--- a/A-bib.bib
+++ b/A-bib.bib
@@ -737,6 +737,17 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for sreedhara2019:
 % ? unused Library catalog ("BioMed Central")
 
+@online{unioncyclisteinternationale,
+  title = {Technical {{Regulations}} for {{Bicycles}}: {{A Practical Guide}} to {{Implementation}}},
+  author = {{Union Cycliste Internationale}},
+  url = {https://s3.amazonaws.com/USACWeb/forms/mechanics/UCI-BikeReg.pdf},
+  urldate = {2022-02-20},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\W2HZHTYK\\UCI-BikeReg.pdf}
+}
+% == BibLateX quality report for unioncyclisteinternationale:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
+
 @article{vanerp2020,
   title = {Case {{Report}}: {{Load}}, {{Intensity}}, and {{Performance Characteristics}} in {{Multiple Grand Tours}}},
   shorttitle = {Case {{Report}}},
@@ -944,6 +955,14 @@ Cycling performance,ventilatory threshold,VO2 max},
   file = {C\:\\Users\\madie\\Zotero\\storage\\S9XQEGLU\\time-trial.html}
 }
 % == BibLateX quality report for zotero-1251:
+% Exactly one of 'date' / 'year' must be present
+
+@online{zotero-1254,
+  title = {Peloton Averages | {{ProCyclingStats}}},
+  url = {https://www.procyclingstats.com/race/tour-de-france/2021/startlist/general-peloton-averages},
+  urldate = {2022-02-20}
+}
+% == BibLateX quality report for zotero-1254:
 % Exactly one of 'date' / 'year' must be present
 
 
