--- a/A-bib.bib
+++ b/A-bib.bib
@@ -617,6 +617,14 @@
 % ? Title looks like it was stored in title-case in Zotero
 % ? unused Library catalog ("PubMed Central")
 
+@online{procyclingstats2021,
+  title = {Peloton Averages},
+  author = {ProCyclingStats},
+  date = {2021},
+  url = {https://www.procyclingstats.com/race/tour-de-france/2021/startlist/general-peloton-averages},
+  urldate = {2022-02-20}
+}
+
 @inproceedings{romcke2019,
   title = {Simulation {{Model}} for {{Road Cycling Time Trials}} with a {{Non-constant Drag Area}}:},
   shorttitle = {Simulation {{Model}} for {{Road Cycling Time Trials}} with a {{Non-constant Drag Area}}},
@@ -955,14 +963,6 @@ Cycling performance,ventilatory threshold,VO2 max},
   file = {C\:\\Users\\madie\\Zotero\\storage\\S9XQEGLU\\time-trial.html}
 }
 % == BibLateX quality report for zotero-1251:
-% Exactly one of 'date' / 'year' must be present
-
-@online{zotero-1254,
-  title = {Peloton Averages | {{ProCyclingStats}}},
-  url = {https://www.procyclingstats.com/race/tour-de-france/2021/startlist/general-peloton-averages},
-  urldate = {2022-02-20}
-}
-% == BibLateX quality report for zotero-1254:
 % Exactly one of 'date' / 'year' must be present
 
 
