--- a/A-bib.bib
+++ b/A-bib.bib
@@ -14,6 +14,21 @@
 % Missing required field 'author'
 % Missing required field 'editor'
 
+@inreference{2021,
+  title = {Density of Air},
+  booktitle = {Wikipedia},
+  date = {2021-12-03T09:45:27Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Density_of_air&oldid=1058409946},
+  urldate = {2022-02-20},
+  abstract = {The density of air or atmospheric density, denoted {$\rho$} (Greek: rho), is the mass per unit volume of Earth's atmosphere. Air density, like air pressure, decreases with increasing altitude. It also changes with variation in atmospheric pressure, temperature and humidity. At 101.325 kPa (abs) and 15 \textdegree C, air has a density of approximately 1.225 kg/m3 (or 0.0765 pounds/ft3), about 1/800 that of water according to ISA (International Standard Atmosphere).Air density is a property used in many branches of science, engineering, and industry, including aeronautics; gravimetric analysis; the air-conditioning industry; atmospheric research and meteorology; agricultural engineering (modeling and tracking of Soil-Vegetation-Atmosphere-Transfer (SVAT) models); and the engineering community that deals with compressed air.Depending on the measuring instruments used, different sets of equations for the calculation of the density of air can be applied.  Air is a mixture of gases and the calculations always simplify, to a greater or lesser extent, the properties of the mixture.},
+  langid = {english},
+  annotation = {Page Version ID: 1058409946},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\5IWF8GY7\\Density_of_air.html}
+}
+% == BibLateX quality report for 2021:
+% Missing required field 'author'
+% Missing required field 'editor'
+
 @book{allen2010,
   title = {Training and Racing with a Power Meter},
   author = {Allen, Hunter and Coggan, Andrew},
@@ -48,6 +63,30 @@
 % Unexpected field 'primaryclass'
 % Unexpected field 'archiveprefix'
 % ? Title looks like it was stored in title-case in Zotero
+
+@article{bartolomei2021,
+  title = {A {{Comparison}} between {{Male}} and {{Female Athletes}} in {{Relative Strength}} and {{Power Performances}}},
+  author = {Bartolomei, Sandro and Grillone, Giuseppe and Di Michele, Rocco and Cortesi, Matteo},
+  date = {2021-02-09},
+  journaltitle = {Journal of Functional Morphology and Kinesiology},
+  shortjournal = {J Funct Morphol Kinesiol},
+  volume = {6},
+  number = {1},
+  eprint = {33572280},
+  eprinttype = {pmid},
+  pages = {17},
+  issn = {2411-5142},
+  doi = {10.3390/jfmk6010017},
+  abstract = {The aim of this study was to compare male vs. female athletes in strength and power performance relative to body mass (BM) and lean body mass (LBM) and to investigate the relationships between muscle architecture and strength in both genders. Sixteen men (age = 26.4 {$\pm$} 5.0 years; body mass = 88.9 {$\pm$} 16.6 kg; height = 177.6 {$\pm$} 9.3 cm) and fourteen women (age = 25.1 {$\pm$} 3.2 years; body mass = 58.1 {$\pm$} 9.1 kg; height = 161.7 {$\pm$} 4.8 cm) were tested for body composition and muscle thickness (MT) of vastus lateralis muscle (VT), pectoralis major (PEC), and trapezius (TRAP). In addition, participants were tested for lower body power at countermovement jump (CMJP) and upper-body power at bench press throw (BPT). Participants were also assessed for one repetition maximum (1RM) at bench press (1RMBP), deadlift (1RMDE), and squat (1RMSQ). Significantly greater (p {$<$} 0.01) MT of the VL, PEC and TRAP muscles and LBM were detected in men compared to women. Significantly greater (p {$<$} 0.05) 1RMBP and BPT adjusted for LBM were detected in men than in women. No significant gender differences after adjusting for LBM were detected for 1RMSQ (p = 0.945); 1RMDE (p = 0.472) and CMJP (p = 0.656). Significantly greater (p {$<$} 0.05) results in all performance assessments adjusted for MT of the specific muscles, were detected in males compared to females. Superior performances adjusted for MT and LBM in men compared to women, may be related to gender differences in muscle morphology and LBM distribution, respectively.},
+  langid = {english},
+  pmcid = {PMC7930971},
+  keywords = {bench press throw,lean body mass,mid-shin pull,muscle thickness},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\5G6VUGWH\\Bartolomei et al. - 2021 - A Comparison between Male and Female Athletes in R.pdf}
+}
+% == BibLateX quality report for bartolomei2021:
+% Unexpected field 'pmcid'
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("PubMed")
 
 @article{black2017,
   title = {Muscle Metabolic and Neuromuscular Determinants of Fatigue during Cycling in Different Exercise Intensity Domains},
@@ -178,6 +217,26 @@
 % 'issn': not a valid ISSN
 % ? unused Library catalog ("DOI.org (Crossref)")
 
+@article{clark2021,
+  title = {A Comparative Analysis of Critical Power Models in Elite Road Cyclists},
+  author = {Clark, Boris and Macdermid, Paul W.},
+  date = {2021-01-01},
+  journaltitle = {Current Research in Physiology},
+  shortjournal = {Current Research in Physiology},
+  volume = {4},
+  pages = {139--144},
+  issn = {2665-9441},
+  doi = {10.1016/j.crphys.2021.05.001},
+  url = {https://www.sciencedirect.com/science/article/pii/S2665944121000171},
+  urldate = {2022-02-20},
+  abstract = {The aims of this study were to compare four different critical power model's ability to ascertain critical power and W{${'}$} in elite road cyclists, while making comparison to power output at respiratory compensation point, work rate (J{$\cdot$}sec-1) at Wmax, and the work done above critical power during the Wmax test in relation to the W'. Ten male, elite endurance cyclists (\.VO2max~\hspace{0pt}=~\hspace{0pt}71.9~\hspace{0pt}{$\pm~$}\hspace{0pt}5.9~\hspace{0pt}ml~\hspace{0pt}kg-1{$\cdot$}min-1) all familiar with critical power testing, participated in 3 testing sessions comprising 1. 15-s isokinetic (130~\hspace{0pt}rpm) sprint, 1-min time trial, a ramp test to exhaustion, 2\textendash 3. a 4-min and/or 10-min self-paced maximal time trial separated by at least 24-h but limited to a 3-week period. The main findings show that all critical power models provided different W' (F(1.061,8.486)~\hspace{0pt}=~\hspace{0pt}39.07, p~\hspace{0pt}=~\hspace{0pt}0.0002) and critical powers (F(1.022,8.179)~\hspace{0pt}=~\hspace{0pt}32.31, p~\hspace{0pt}=~\hspace{0pt}0.0004), while there was no difference between each model's critical power and power output at respiratory compensation point (F(1.155, 9.243)~\hspace{0pt}=~\hspace{0pt}2.72, p~\hspace{0pt}=~\hspace{0pt}0.131). Differences between models or comparisons with respiratory compensation point were deemed not clinically useful in the provision of training prescription or performance monitoring if the aim is to equal work rate at compensation point. There was also no post-hoc difference between work completed at Wmax (kJ) (p~\hspace{0pt}=~\hspace{0pt}0.890) and W{${'}$} using the nonlinear-3 model. Further research is required to investigate the physiological markers of intensity associated with respiratory compensation point and critical power work rate and the bioenergetic contribution to W'.},
+  langid = {english},
+  keywords = {Critical power,Cycling,Training thresholds,W-prime,W’},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\JDYADQT3\\clark_2021_.pdf}
+}
+% == BibLateX quality report for clark2021:
+% ? unused Library catalog ("ScienceDirect")
+
 @article{cross2020,
   title = {Using {{Critical Power To Predict Ramp Incremental Cycling Performance}}: {{Three Parameters Are Better Than Two}}: 1337 {{May}} 28 9:30 {{AM}} - 9:45 {{AM}}},
   shorttitle = {Using {{Critical Power To Predict Ramp Incremental Cycling Performance}}},
@@ -237,6 +296,18 @@
 % == BibLateX quality report for delucas2013a:
 % ? unused Library catalog ("DOI.org (Crossref)")
 
+@online{engineeringtoolbox2004,
+  title = {Drag {{Coefficient}}},
+  author = {{Engineering Toolbox}},
+  date = {2004},
+  url = {https://www.engineeringtoolbox.com/drag-coefficient-d_627.html},
+  urldate = {2022-02-20},
+  organization = {{Engineering Toolbox}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\8Z7UTM5T\\drag-coefficient-d_627.html}
+}
+% == BibLateX quality report for engineeringtoolbox2004:
+% ? Title looks like it was stored in title-case in Zotero
+
 @article{faria2005,
   title = {The {{Science}} of {{Cycling}}},
   author = {Faria, Erik W. and Parker, Daryl L. and Faria, Irvin E.},
@@ -278,6 +349,26 @@
 % == BibLateX quality report for felippe2018:
 % Unexpected field 'publisher'
 % ? unused Library catalog ("journals.physiology.org (Atypon)")
+
+@article{francis2010,
+  title = {Defining Intensity Domains from the End Power of a 3-Min All-out Cycling Test},
+  author = {Francis, James T. and Quinn, Timothy J. and Amann, Markus and LaRoche, Dain P.},
+  date = {2010-09},
+  journaltitle = {Medicine and Science in Sports and Exercise},
+  shortjournal = {Med Sci Sports Exerc},
+  volume = {42},
+  number = {9},
+  eprint = {20142776},
+  eprinttype = {pmid},
+  pages = {1769--1775},
+  issn = {1530-0315},
+  doi = {10.1249/MSS.0b013e3181d612e8},
+  abstract = {PURPOSE: The purpose of this study was to develop a modified version of a 3-min all-out cycling test (3MT) using equipment readily available to cyclists and to identify exercise intensity domains using the average power output over the last 30 s of the 3MT (end-test power (EP)). METHODS: Sixteen competitive cyclists (V(O2peak) = 60.3 +/- 8.3 mL.kg.min) completed three laboratory visits using their own bicycles and a power-measuring rear wheel. In visit 1, subjects performed an incremental load test to volitional termination on an electronically braked trainer (100 + 25 W every 4 min). Power output at lactate threshold was determined by absolute 4 mmol.L (OBLA-PO) and 1 mmol.L over exercise baseline (LT-PO). Power output at ventilatory threshold (VT-PO) was computed on the basis of the V-slope method. Power output at V(O2peak) (V(O2peak)-PO) was the mean power observed during the stage at which peak O2 consumption was recorded. In visits 2 and 3, subjects performed the 3MT using a progressive resistance trainer with Visit 2 as a familiarization trial. During Visit 3, EP was recorded. RESULTS: EP (273 +/- 52 W) was significantly greater than VT-PO, OBLA-PO, and LT-PO (232 +/- 64, 235 +/- 54, and 208 +/- 45 W, respectively) but significantly less than V(O2peak)-PO (288 +/- 56 W). EP was correlated with V(O2peak)-PO (r = 0.97), VT-PO (r = 0.87), OBLA-PO (r = 0.85), and LT-PO (r = 0.79) with regression estimates through the origin made using 105\%, 86\%, 86\%, and 76\% of EP, respectively. Demarcations for moderate- to heavy-intensity (LT-PO at 76\% EP) and heavy- to severe-intensity (100\% EP) domains may be estimated. CONCLUSION: The 3MT can be used to define exercise intensity in competitive cyclists using readily available equipment.},
+  langid = {english},
+  keywords = {Adult,Anaerobic Threshold,Athletes,Bicycling,Exercise Test,Female,Humans,Lactic Acid,Male,Oxygen Consumption,Resistance Training,Young Adult}
+}
+% == BibLateX quality report for francis2010:
+% ? unused Library catalog ("PubMed")
 
 @online{goossens2018,
   title = {Comparison of {{W}}'balance Algorithms},
@@ -592,6 +683,77 @@
 % == BibLateX quality report for morton2006:
 % ? unused Library catalog ("Springer Link")
 
+@article{pinot2010,
+  title = {The `{{Power Profile}}' for Determining the Physical Capacities of a Cyclist},
+  author = {Pinot, J. and Grappe, F.},
+  date = {2010-09-01},
+  journaltitle = {Computer Methods in Biomechanics and Biomedical Engineering},
+  volume = {13},
+  pages = {103--104},
+  publisher = {{Taylor \& Francis}},
+  issn = {1025-5842},
+  doi = {10.1080/10255842.2010.495580},
+  url = {https://doi.org/10.1080/10255842.2010.495580},
+  urldate = {2022-02-20},
+  issue = {sup1},
+  keywords = {cycling,longitudinal follow-up,physical capacities,Power Profile},
+  annotation = {\_eprint: https://doi.org/10.1080/10255842.2010.495580},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\R3KR3IBG\\pinot_2010_.pdf}
+}
+% == BibLateX quality report for pinot2010:
+% Unexpected field 'publisher'
+% ? unused Library catalog ("Taylor and Francis+NEJM")
+
+@article{pinot2011,
+  title = {The {{Record Power Profile}} to {{Assess Performance}} in {{Elite Cyclists}}},
+  author = {Pinot, J. and Grappe, F.},
+  date = {2011-11},
+  journaltitle = {International Journal of Sports Medicine},
+  shortjournal = {Int. J. Sports Med.},
+  volume = {32},
+  number = {11},
+  pages = {839--844},
+  publisher = {{Georg Thieme Verlag Kg}},
+  location = {{Stuttgart}},
+  issn = {0172-4622},
+  doi = {10.1055/s-0031-1279773},
+  url = {https://gateway.webofknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcAuth=DOISource&SrcApp=UA&KeyAID=10.1055%2Fs-0031-1279773&DestApp=DOI&SrcAppSID=5FqQGt8WZmFDZvhZsLF&SrcJTitle=INTERNATIONAL+JOURNAL+OF+SPORTS+MEDICINE&DestDOIRegistrantName=Georg+Thieme+Verlag+KG},
+  urldate = {2022-02-20},
+  abstract = {The purpose of this study was to assess the Record Power Profile (RPP) of cyclists, i.e., the relationship between different record Power Output (PO) and the corresponding durations through a whole race season. We hypothesized that PO of different effort durations could differ according to the cyclist's category and race performance profile. 17 cyclists (9 professionals and 8 elites) performed all trainings and competitions during 10 months with a mobile power meter device (SRM) mounted on their bike. The results show that the cyclists' RPP is a hyperbolic relationship between the different record PO and time durations. It significantly reflects the characteristics of different skills: 1) sprinters have the highest record PO within zone 5, 2) climbers present the highest record PO within zones 2-3 and, 3) climbers and flat specialists have higher zone 1 record PO than sprinters. These results suggest that the RPP represents "a signature" of the cyclists' physical capacity and that it allows the determination of different training intensities. The RPP appears as a new concept that is interesting for coaches and scientists in order to evaluate performance in cycling.},
+  langid = {english},
+  keywords = {cycling,output,performance,physical capacities,power profile,science,sport,srm,SRM powermeter,work capacity},
+  annotation = {WOS:000296773400005},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\74Y3VSII\\pinot_2011_.pdf}
+}
+% == BibLateX quality report for pinot2011:
+% Unexpected field 'publisher'
+% Unexpected field 'location'
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("Web of Science Nextgen")
+
+@article{pinot2015,
+  title = {A Six-Year Monitoring Case Study of a Top-10 Cycling {{Grand Tour}} Finisher},
+  author = {Pinot, Julien and Grappe, Frederic},
+  date = {2015-05-28},
+  journaltitle = {Journal of Sports Sciences},
+  volume = {33},
+  number = {9},
+  eprint = {25357188},
+  eprinttype = {pmid},
+  pages = {907--914},
+  publisher = {{Routledge}},
+  issn = {0264-0414},
+  doi = {10.1080/02640414.2014.969296},
+  url = {https://doi.org/10.1080/02640414.2014.969296},
+  urldate = {2022-02-20},
+  abstract = {This study analysed the evolution of the physical potential of a twice top-10 Grand Tour cycling finisher (Tour de France and Vuelta a Espa\~na) whose training was monitored between the ages of 18 and 23 years. The world-class cyclist's power output (PO) data and training indices were analysed over six years to determine the evolution of his record power profile and training load (TL), which were estimated by using the session rating of perceived exertion (RPE) method. The total annual duration and TL increased through six seasons by 79\% and 83\%, respectively. The record POs in all exercise intensity zones improved over the six years. The increases in TL, monotony (+34\%) and strain (+162\%) from the junior category to the world-class level significantly correlated with an improvement in his aerobic potential, which was characterised by an increase in the record POs between 5 min and 4 h. This case study of the performance level and training parameters of a world-class cyclist provides comprehensive insight into the evolution of a cyclist to the top level. Furthermore, determining the record power profile of this athlete over six competitive seasons illuminates the maturation of the physical potential of a top-10 Grand Tour finisher.},
+  keywords = {elite cycling,performance,physical potential,power output,training load},
+  annotation = {\_eprint: https://doi.org/10.1080/02640414.2014.969296}
+}
+% == BibLateX quality report for pinot2015:
+% Unexpected field 'publisher'
+% ? unused Library catalog ("Taylor and Francis+NEJM")
+
 @article{poole2016,
   title = {Critical {{Power}}: {{An Important Fatigue Threshold}} in {{Exercise Physiology}}},
   shorttitle = {Critical {{Power}}},
@@ -644,6 +806,31 @@
 }
 % == BibLateX quality report for romcke2019:
 % ? unused Library catalog ("DOI.org (Crossref)")
+
+@article{sitko2020,
+  title = {Power {{Assessment}} in {{Road Cycling}}: {{A Narrative Review}}},
+  shorttitle = {Power {{Assessment}} in {{Road Cycling}}},
+  author = {Sitko, Sebastian and Cirer-Sastre, Rafel and Corbi, Francisco and L\'opez-Laval, Isaac},
+  date = {2020-01},
+  journaltitle = {Sustainability},
+  volume = {12},
+  number = {12},
+  pages = {5216},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2071-1050},
+  doi = {10.3390/su12125216},
+  url = {https://www.mdpi.com/2071-1050/12/12/5216},
+  urldate = {2022-02-20},
+  abstract = {Nowadays, the evaluation of physiological characteristics and training load quantification in road cycling is frequently performed through power meter data analyses, but the scientific evidence behind this tool is scarce and often contradictory. The aim of this paper is to review the literature related to power profiling, functional threshold testing, and performance assessment based on power meter data. A literature search was conducted following preferred reporting items for review statement (PRISMA) on the topic of \{``cyclist'' OR ``cycling'' AND ``functional threshold'' OR ``power meter''\}. The reviewed evidence provided important insights regarding power meter-based training: (a) functional threshold testing is closely related to laboratory markers of steady state; (b) the 20-min protocol represents the most researched option for functional threshold testing, although shorter durations may be used if verified on an individual basis; (c) power profiling obtained through the recovery of recorded power outputs allows the categorization and assessment of the cyclist's fitness level; and (d) power meters represent an alternative to laboratory tests for the assessment of the relationship between power output and cadence. This review elucidates the increasing amount of studies related to power profiling, functional threshold testing, and performance assessment based on power meter data, highlighting the opportunity for the expanding knowledge that power meters have brought in the road cycling field.},
+  issue = {12},
+  langid = {english},
+  keywords = {endurance,functional threshold,performance assessment,power meter,training},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\MJRUKEYY\\sitko_2020_.pdf}
+}
+% == BibLateX quality report for sitko2020:
+% Unexpected field 'publisher'
+% ? Title looks like it was stored in title-case in Zotero
+% ? unused Library catalog ("www.mdpi.com")
 
 @article{skiba2012,
   title = {Modeling the {{Expenditure}} and {{Reconstitution}} of {{Work Capacity}} above {{Critical Power}}.  [{{Miscellaneous Article}}]},
@@ -964,6 +1151,37 @@ Cycling performance,ventilatory threshold,VO2 max},
 }
 % == BibLateX quality report for zotero-1251:
 % Exactly one of 'date' / 'year' must be present
+
+@online{zotero-1267,
+  title = {How Does Your Cycling Power Output Compare?},
+  url = {https://www.cyclinganalytics.com/blog/2018/06/how-does-your-cycling-power-output-compare},
+  urldate = {2022-02-20},
+  langid = {english},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\649IXP26\\how-does-your-cycling-power-output-compare.html}
+}
+% == BibLateX quality report for zotero-1267:
+% Exactly one of 'date' / 'year' must be present
+
+@online{zotero-1279,
+  title = {Method, {{Finish Times}} \& {{Effects}} of {{Increasing Power}} on {{Cycling Speed}} \textendash{} {{Ride Far}}},
+  url = {https://ridefar.info/bike/cycling-speed/method/},
+  urldate = {2022-02-20},
+  langid = {american},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\TX49IT8I\\method.html}
+}
+% == BibLateX quality report for zotero-1279:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
+
+@online{zotero-1283,
+  title = {The {{Drag Equation}}},
+  url = {https://www.grc.nasa.gov/www/k-12/rocket/drageq.html},
+  urldate = {2022-02-20},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\9WG3C3X4\\drageq.html}
+}
+% == BibLateX quality report for zotero-1283:
+% Exactly one of 'date' / 'year' must be present
+% ? Title looks like it was stored in title-case in Zotero
 
 
 % Required packages:
