sources and power curve figure

--- a/A-bib.bib
+++ b/A-bib.bib
@@ -14,6 +14,18 @@
 % Missing required field 'author'
 % Missing required field 'editor'
 
+@online{2019a,
+  title = {What {{Is}} the {{Density}} of {{Air}} at {{STP}}?},
+  date = {2019-11-21T21:43:50+00:00},
+  url = {https://macinstruments.com/blog/what-is-the-density-of-air-at-stp/},
+  urldate = {2022-02-20},
+  abstract = {MAC Instruments defines what standard temperature and pressure (STP) is for air density, and how this measurement factors into moisture analysis.},
+  organization = {{Machine Applications Corporation}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\U6KGTBMI\\what-is-the-density-of-air-at-stp.html}
+}
+% == BibLateX quality report for 2019a:
+% ? Title looks like it was stored in title-case in Zotero
+
 @inreference{2021,
   title = {Density of Air},
   booktitle = {Wikipedia},
